# kanban-code-challenge

./: .dockerignore  .gitignore  .tool-versions  compose.yaml  package-lock.json  package.json  readme.md
api/: pyproject.toml
api/container/: Containerfile
api/mini_kanban_api/: dal.py  db.py  main.py  schema.py  seed.py
scripts/: build-compose.sh  reset-db.sh  run-compose.sh
src/: App.css  App.tsx  contexts.ts  queries.ts  store.ts  typedefs.ts
src/components/: board.tsx  card.tsx  column.tsx
web/: package-lock.json  package.json
web/container/: Containerfile
web/deploy/: Caddyfile
web/public/: manifest.json
web/src/: App.css  App.tsx  store.ts
web/src/components/: board.tsx  createCard.tsx
